--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,12 +66,6 @@ jobs:
             .venv/bin/pip install ansible ansible-lint && \
             .venv/bin/ansible-galaxy collection install community.general ansible.posix
 
-      - name: Lint Ansible
-        run: |
-          source .venv/bin/activate && \
-            .venv/bin/ansible-lint --version && \
-            .venv/bin/ansible-lint playbooks/
-
       - name: Expose Ansible Vault password
         run: |
           cat <<EOF > .vault_pass
@@ -79,6 +73,14 @@ jobs:
           echo $ANSIBLE_VAULT_PASSWORD
           EOF
           chmod +x .vault_pass
+
+      - name: Lint Ansible
+        env:
+          ANSIBLE_VAULT_PASSWORD: ${{ secrets.ANSIBLE_VAULT_PASSWORD }}
+        run: |
+          source .venv/bin/activate && \
+            .venv/bin/ansible-lint --version && \
+            .venv/bin/ansible-lint playbooks/
 
       - name: Build AMI with Packer
         id: packer_build
