--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,7 +56,8 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update && sudo apt-get install -y \
-            jq tar gzip rsync git curl unzip
+            jq tar gzip rsync git curl unzip \
+            zstd xz-utils bzip2
 
       - name: Install Ansible
         run: |
