--- a/playbooks/migrate.yml
+++ b/playbooks/migrate.yml
@@ -7,6 +7,7 @@
       - net_dharmawheel_www
       - com_dharmapaths_www
   tasks:
+
     - name: Run migration script
       ansible.builtin.command:
         cmd: |
@@ -14,3 +15,7 @@
         chdir: "/var/www/{{ item }}"
       changed_when: false
       loop: "{{ sites }}"
+
+    - name: Pause for 10 seconds
+      ansible.builtin.pause:
+        seconds: 10
