Add retrying to health check

--- a/playbooks/verify.yml
+++ b/playbooks/verify.yml
@@ -1,18 +1,15 @@
 - name: Verify that the server works
   hosts: dw-mono
   tasks:
+    - name: Pause for 10 seconds
+      ansible.builtin.pause:
+        seconds: 10
+
     - name: Call health check endpoint
       ansible.builtin.uri:
         url: http://localhost/health
         return_content: true
       register: health_check
-
-    - name: Print health check response
-      ansible.builtin.debug:
-        var: health_check
-
-    - name: Assert that the health check was successful
-      ansible.builtin.assert:
-        that:
-          - health_check.status == 200
-          - health_check.json['overallStatus'] == 'UP'
+      until: health_check.status == 200
+      retries: 15
+      delay: 5
