--- a/playbooks/migrate.yml
+++ b/playbooks/migrate.yml
@@ -15,3 +15,13 @@
         chdir: "/var/www/{{ item }}"
       changed_when: false
       loop: "{{ sites }}"
+
+    - name: Set nginx to owner of cache, files, images, and store directories
+      ansible.builtin.command:
+        cmd: |
+          chown -R nginx:nginx /var/www/{{ item }}/cache
+          chown -R nginx:nginx /var/www/{{ item }}/files
+          chown -R nginx:nginx /var/www/{{ item }}/images
+          chown -R nginx:nginx /var/www/{{ item }}/store
+      changed_when: false
+      loop: "{{ sites }}"
