--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -107,5 +107,4 @@ jobs:
         run: |
           aws autoscaling start-instance-refresh \
             --auto-scaling-group-name $(terraform output -raw autoscaling_group_name) \
-            --preferences MinHealthyPercentage=100,InstanceWarmup=300 \
-            --strategy Rolling
+            --preferences MinHealthyPercentage=100,InstanceWarmup=30,StandbyInstances=Terminate
