--- a/roles/forum_spam_filter/tasks/php.yml
+++ b/roles/forum_spam_filter/tasks/php.yml
@@ -1,25 +1,25 @@
 - name: Install gRPC for PHP using pecl
   community.general.pear:
-    name: grpc
+    name: pecl/grpc
     state: present
 
 - name: Add grpc.so to php.ini
   ansible.builtin.copy:
     content: "extension=grpc.so"
-    dest: /etc/php.d/grpc.ini
+    dest: /etc/php.d/99-grpc.ini
     owner: root
     group: root
     mode: "0644"
 
 - name: Install protobuf for PHP using pecl
   community.general.pear:
-    name: protobuf
+    name: pecl/protobuf
     state: present
 
 - name: Add protobuf.so to php.ini
   ansible.builtin.copy:
     content: "extension=protobuf.so"
-    dest: /etc/php.d/protobuf.ini
+    dest: /etc/php.d/99-protobuf.ini
     owner: root
     group: root
     mode: "0644"
