Fix permissions so that spam filter service can run

--- a/roles/forum_spam_filter/tasks/install.yml
+++ b/roles/forum_spam_filter/tasks/install.yml
@@ -23,7 +23,8 @@
       - GIT_COMMIT_ID
       - ThirdPartyNotices.txt
       - Privacy.md
-    mode: "0644"
+    owner: "{{ forum_spam_filter_user }}"
+    group: "{{ forum_spam_filter_group }}"
     creates: "{{ forum_spam_filter_onnxruntime_prefix }}/lib/libonnxruntime.so"
 
 - name: Render systemd service file
