BlockFoes: Modify DB queries instead of frontend changes

--- a/phpbb_extensions/dhammawheel/blockfoes/config/services.yml
+++ b/phpbb_extensions/dhammawheel/blockfoes/config/services.yml
@@ -4,6 +4,6 @@ services:
         arguments:
             - '@dbal.conn'
             - '@user'
-            - '@language'
+            - '@template'
         tags:
             - { name: event.listener }
