--- a/playbooks/dw_mono_base.yml
+++ b/playbooks/dw_mono_base.yml
@@ -5,9 +5,9 @@
     - name: Check OS
       ansible.builtin.assert:
         that:
-          - ansible_os_family == "RedHat"
-          - ansible_distribution == "Amazon"
-          - ansible_distribution_version == "2023"
+          - ansible_facts["os_family"] == "RedHat"
+          - ansible_facts["distribution"] == "Amazon"
+          - ansible_facts["distribution_version"] == "2023"
         msg: "This playbook is only compatible with Amazon Linux 2023"
     - name: Check that secrets are accessible
       ansible.builtin.assert:
