--- a/roles/forum_spam_filter/tasks/build.yml
+++ b/roles/forum_spam_filter/tasks/build.yml
@@ -1,5 +1,5 @@
 - name: Install prerequisites
-  when: ansible_os_family == "RedHat"
+  when: ansible_facts["os_family"] == "RedHat"
   ansible.builtin.dnf:
     name:
       - gcc
@@ -11,7 +11,7 @@
     state: present
 
 - name: Install prerequisites
-  when: ansible_os_family == "Debian"
+  when: ansible_facts["os_family"] == "Debian"
   ansible.builtin.apt:
     name:
       - cmake
